Replace tugas05.css with style.css in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>STMIK Mardira Indonesia</title>
-  <link rel="stylesheet" href="tugas05.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="top-band">
@@ -118,4 +118,5 @@
 </footer>
 
 </html>
+
 
