Update index.html with new content and links

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="brand">STMIK-MI</div>
       <ul class="nav-links">
         <li><a href="#Home">Home</a></li>
-        <li><a href="#Program Studi">Program Studi</a></li>
+        <li><a href="https://stmik-mi.ac.id/">Program Studi</a></li>
         <li><a href="#UKM">UKM</a></li>
         <li><a class="btn-primary" href="#Follow Us">Follow Us</a></li>
       </ul>
@@ -29,7 +29,7 @@
         <h1>STMIK MARDIRA <span class="accent">INDONESIA</span></h1>
         <p class="address">Jl. Soekarno Hatta Jl. Leuwi Panjang No.211</p>
         <p class="cta-sub">Kunjungi Kami</p>
-        <a class="btn-animasi" href="#">Klik disini!</a>
+        <a class="btn-animasi" href="https://stmik-mi.ac.id/">Klik disini!</a>
       </div>
     </div>
 
@@ -118,5 +118,6 @@
 </footer>
 
 </html>
+
 
 
